@@ -1,0 +1,3 @@
+MD5 a7d382827c334d8a998707e0927a02bb patch-2.6.8-rc2.bz2 3147924
+MD5 a74671ea68b0e3c609e8785ed8497c14 linux-2.6.7.tar.bz2 35092228
+MD5 36c684e83c41ab238bcc40933a12f8b8 2.6.8-rc2-love1.bz2 796885
